--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
     "weui": "^2.1.3",
-    "weui.js": "^1.2.1"
+    "weui.js": "^1.2.1",
+    "vant": "^2.10.2"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
